# intern-game-logic-programmer

./: README.md  pyproject.toml  setup.py
src/: ctask2.pyi  ctask2module.c  ctask3.pyi  ctask3module.c  task1.py  task2.py  task3.py
tests/: task1_test.py  task2_test.py  task3_test.py
