[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "intern-game-logic-programmer"
version = "0.0.0"
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
